Bug 166873 - The 'relative to' checkbox is unchecked after reopening Image properties dialog
Summary: The 'relative to' checkbox is unchecked after reopening Image properties dialog
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-06 07:42 UTC by Telesto
Modified: 2025-06-12 17:38 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (142.06 KB, application/vnd.oasis.opendocument.text)
2025-06-06 07:42 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2025-06-06 07:42:02 UTC
Description:
The relative to checkbox unchecked in Image properties Position and size unchecked when reopening the dialog

Steps to Reproduce:
1. Open the attached file
2. Select the image
3. Press F4 or Right Click Properties
4. Position and size tab
5. Check relative to for width
6. Press OK
7. Press F4 again. 

Actual Results:
Checkbox unchecked

Expected Results:
Still being checked


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 25.8.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: c854f5aaae575a0570f79a225b80b53ed420578c
CPU threads: 8; OS: macOS 14.7.4; UI render: default; VCL: osx
Locale: nl-NL (nl_NL.UTF-8); UI: en-US
Calc: threaded

not in
7.0.0.3
Comment 1 Telesto 2025-06-06 07:42:14 UTC
Created attachment 201117 [details]
Example file
Comment 2 Andrew Kopf 2025-06-06 17:46:11 UTC
Hello Telesto,
Thank you for the bug report. I can confirm the issue exists in master.

Bibisected

https://git.libreoffice.org/core/+/81f7503d2d205f4f6df0bfd1a66ed10cccb556c2

tdf#132853 - UI: fix different sizes in Image tabs Type & Crop

Sincornize Graphic frame size and frame size values in Writer
"Position and Size" tab and "Crop" tab.

Change-Id: Ifc325bb510ac4d2376ec5be791aadb7df81e8ff5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/180510
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>



commit 1d8c62a49683a29ead465ec015b18f6e3facd1dd
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Jan 24 09:35:04 2025 -0800

    source 81f7503d2d205f4f6df0bfd1a66ed10cccb556c2

    source 81f7503d2d205f4f6df0bfd1a66ed10cccb556c2

 instdir/program/setup.ini   |   2 +-
 instdir/program/swuilo.dll  | Bin 2791424 -> 2791424 bytes
 instdir/program/version.ini |   2 +-
 3 files changed, 2 insertions(+), 2 deletions(-)
Comment 3 Commit Notification 2025-06-12 15:36:47 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bc8630daf238450fde6e22ff88547172c7007143

tdf#166873 - sw UI fix 'relative to' checkbox is unchecked after

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.