tdf#166873 - sw UI fix 'relative to' checkbox is unchecked after

reopening Image properties dialog

Relative size also need to be checked before setting graphic/frame
size.

Follow up for: 81f7503d2d205f4f6df0bfd1a66ed10cccb556c2
(tdf#132853 - UI: fix different sizes in Image tabs Type & Crop)

Change-Id: Ic67b8c384ac2a70506add652a57c9b462bf199b1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/186362
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>